--- a/201808.md
+++ b/201808.md
@@ -4,6 +4,30 @@
   - github: https://github.com/zeeshanu/dumper.js
   
 - 2.javascript-algorithms：算法和数据结构中实现JavaScript解释和进一步阅读链接
-  - https://github.com/trekhleb/javascript-algorithms
+  - GitHub：https://github.com/trekhleb/javascript-algorithms
   
-- 3.
+- 3.vue-design：逐行级别的源码分析 
+  - http://hcysun.me/vue-design/
+  - GitHub：https://github.com/HcySunYang/vue-design
+- 4.carbon：让分享的代码截图更好看些
+  - https://dawnlabs.io/carbon
+  - GitHub：https://github.com/dawnlabs/carbon
+- 5.apexcharts.js：js 图表库
+  - https://github.com/apexcharts/apexcharts.js
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
