--- a/201808.md
+++ b/201808.md
@@ -1,7 +1,7 @@
 # 201808
 
 - 1.dumper.js: Node.js 变量检查
-  - github: https://github.com/zeeshanu/dumper.js
+  - GitHub: https://github.com/zeeshanu/dumper.js
   
 - 2.javascript-algorithms：算法和数据结构中实现JavaScript解释和进一步阅读链接
   - GitHub：https://github.com/trekhleb/javascript-algorithms
@@ -9,12 +9,68 @@
 - 3.vue-design：逐行级别的源码分析 
   - http://hcysun.me/vue-design/
   - GitHub：https://github.com/HcySunYang/vue-design
+  
 - 4.carbon：让分享的代码截图更好看些
   - https://dawnlabs.io/carbon
   - GitHub：https://github.com/dawnlabs/carbon
+  
 - 5.apexcharts.js：js 图表库
   - https://github.com/apexcharts/apexcharts.js
   
+- 6.Jumpserver：全球首款完全开源的堡垒机，是符合 4A 的专业运维审计系统。 
+  - http://www.jumpserver.org
+  - GitHub：https://github.com/jumpserver/jumpserver
+
+- 7.Airbnb js 代码规范
+  - GitHub：https://github.com/airbnb/javascript
+
+- 8.Taskbook: 命令行的任务看板
+  - GitHub：https://github.com/klauscfhq/taskbook
+  
+- 9.terminalizer：记录您的终端并生成动画gif图像
+  - GitHub： https://github.com/faressoft/terminalizer
+
+- 10.ims：npm模块安装程序
+  - GitHub：https://github.com/mafintosh/ims
+
+- 11.puppeteer：Puppeteer是一个Nodejs的库，支持调用Chrome的API来操纵Web
+  - GitHub：https://github.com/GoogleChrome/puppeteer
+
+- 12.got: 一个人性化和强大的HTTP请求
+  - GitHub：https://github.com/sindresorhus/got
+
+- 13.gatsby：静态网站生成器
+  - GitHub： https://github.com/gatsbyjs/gatsby
+  
+- 14.Ghost：基于 Node.js 开源博客平台
+  - GitHub：https://github.com/TryGhost/Ghost
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
