--- a/201808.md
+++ b/201808.md
@@ -35,6 +35,7 @@
 
 - 11.puppeteer：Puppeteer是一个Nodejs的库，支持调用Chrome的API来操纵Web
   - GitHub：https://github.com/GoogleChrome/puppeteer
+  - Puppeteer 实战：https://cnodejs.org/topic/5a4d8d2299d207fa49f5cbbc
 
 - 12.got: 一个人性化和强大的HTTP请求
   - GitHub：https://github.com/sindresorhus/got
