--- a/201808.md
+++ b/201808.md
@@ -49,9 +49,11 @@
 - 15.ndb: Node.js 改进的调试库
   - GitHub：https://github.com/GoogleChromeLabs/ndb
 
-- 
+- 16.graphqurl：具有自动完成，订阅的GraphiQL的请求
+  - GitHub：https://github.com/hasura/graphqurl
 
-
+- 17.Netron：深度学习和机器学习模型的可视化工具
+  - GitHub：https://github.com/lutzroeder/Netron
 
 
 
