--- a/201808.md
+++ b/201808.md
@@ -55,6 +55,12 @@
 - 17.Netron：深度学习和机器学习模型的可视化工具
   - GitHub：https://github.com/lutzroeder/Netron
 
+- 18.WTFJS 是一个纯 JavaScript 的代码 博客
+  - GitHub：https://github.com/denysdovhan/wtfjs
+
+- 19.VasSonic框架是市面上支持最为完善的Hybrid框架，完美适用于静态直出页面和动态直出页面
+  - GitHub：https://github.com/Tencent/VasSonic
+
 
 
 
