--- a/201808.md
+++ b/201808.md
@@ -61,7 +61,14 @@
 - 19.VasSonic框架是市面上支持最为完善的Hybrid框架，完美适用于静态直出页面和动态直出页面
   - GitHub：https://github.com/Tencent/VasSonic
 
+- 20.Best Resume Ever 是一个帮助你快速生成漂亮简历的工具，它基于 Vue 和 LESS，生成的简历可导出为 PDF 格式
+  - https://github.com/salomonelli/best-resume-ever
 
+- 21.百度 RPC 框架 BRPC
+  - GitHub：https://github.com/brpc/brpc
+
+- 22.高性能纯 JavaScript 懒加载器 Lozad.js
+  - GitHub：https://github.com/ApoorvSaxena/lozad.js
 
 
 
