--- a/201808.md
+++ b/201808.md
@@ -70,7 +70,11 @@
 - 22.高性能纯 JavaScript 懒加载器 Lozad.js
   - GitHub：https://github.com/ApoorvSaxena/lozad.js
 
+- 23.Napa.js 是微软开源的一个基于 V8 的多线程 JavaScript 运行环境
+  - GitHub：https://github.com/Microsoft/napajs
 
+- 24.STYLE2PAINTS 是新一代的线稿上色 AI ，可根据用户上传的自定义色彩给线稿进行上色。利用AI来代替美工动画制作
+  - GitHub：https://github.com/lllyasviel/style2paints
 
 
 
