--- a/201808.md
+++ b/201808.md
@@ -76,6 +76,17 @@
 - 24.STYLE2PAINTS 是新一代的线稿上色 AI ，可根据用户上传的自定义色彩给线稿进行上色。利用AI来代替美工动画制作
   - GitHub：https://github.com/lllyasviel/style2paints
 
+- 25.github-profile-summary：一个用于可视化GitHub配置的文件工具，将 Github 资料做成一个可视化的单页
+  - GitHub：https://github.com/tipsy/profile-summary-for-github
+
+- 26.游戏框架boardgame.io
+  - GitHub：https://github.com/google/boardgame.io
+
+- 27.Front-End-Checklist：前端清单，专门为现代化网站和前端开发人员准备的，里面包含前端开发的大部分项目
+  - GitHub： https://github.com/thedaviddias/Front-End-Checklist
+
+- 28.30-seconds-of-code：这个项目里精心收集了大量有用的JavaScript代码片段
+  - GitHub：https://github.com/Chalarangelo/30-seconds-of-code
 
 
 
