--- a/201810.md
+++ b/201810.md
@@ -1,8 +1,13 @@
 # 201810
 
-## freecodecamp: 最火的 web 开发学习平台
+## 1.freecodecamp: 最火的 web 开发学习平台
 >免费的 web 开发学习平台，主要是前端开发
 
 - GitHub：https://github.com/freeCodeCamp/freeCodeCamp
 - website： https://www.freecodecamp.org/
 - Web Design：https://learn.freecodecamp.org/
+
+
+## 2.percollate：通过命令行就可以把网页保存成 PDF 文件（基于 Node.js）
+- GitHub： https://github.com/danburzo/percollate
+- 把网页保存成 PDF: `percollate pdf --output some.pdf https://example.com`
