--- a/201810.md
+++ b/201810.md
@@ -11,3 +11,15 @@
 ## 2.percollate：通过命令行就可以把网页保存成 PDF 文件（基于 Node.js）
 - GitHub： https://github.com/danburzo/percollate
 - 把网页保存成 PDF: `percollate pdf --output some.pdf https://example.com`
+
+
+
+## 3.Computer-Vision-Basics-with-Python-Keras-and-OpenCV:趣味机器学习项目：(Keras/OpenCV)手势识别教程
+>基于计算机视觉和机器学习技术，用Keras/OpenCV和Python打造一个手势识别模型。 
+
+- GitHub：https://github.com/jrobchin/Computer-Vision-Basics-with-Python-Keras-and-OpenCV
+
+
+
+## 
+
