--- a/201810.md
+++ b/201810.md
@@ -21,5 +21,26 @@
 
 
 
-## 
+## 4.DeepJ：端到端特定风格音乐生成 
+
+>一款AI版的DJ，能够实时以端到端的形式合成具体的钢琴曲。AI不仅能学习不同的音乐风格，还能学习曲子的动态变化。 
+
+- GitHub：https://github.com/calclavia/DeepJ
+- website：https://deepj.ai
+
+
+## 5.Paints Chainer：一款用于为漫画上色的工具，只需上传一张黑白线稿，点击按钮，背后的 AI 即可自动为你生成一张彩色漫画。
+
+- GitHub：https://github.com/pfnet/PaintsChainer
+- website：https://paintschainer.preferred.tech/
+
+
+
+## 6.Marp：基于 Electron & Markdown 的幻灯片写作软件！简单几行即可新建幻灯片，而且以后幻灯片上的代码高亮统统无所畏惧。
+
+- GitHub：https://github.com/yhatt/marp/
+- website：https://yhatt.github.io/marp/
+
+## 7.skill-map: 程序员技能图谱
+- GitHub：https://github.com/TeamStuQ/skill-map
 
