--- a/201810.md
+++ b/201810.md
@@ -44,3 +44,9 @@
 ## 7.skill-map: 程序员技能图谱
 - GitHub：https://github.com/TeamStuQ/skill-map
 
+
+## 8.architect-awesome：《后端架构师技术图谱》
+- GitHub：https://github.com/xingshaocheng/architect-awesome
+
+
+
