--- a/201810.md
+++ b/201810.md
@@ -49,4 +49,7 @@
 - GitHub：https://github.com/xingshaocheng/architect-awesome
 
 
+## 9.腾讯发布前端组件框架 Omi:
+- GitHub: https://github.com/Tencent/omi
+- doc: https://github.com/Tencent/omi/blob/master/docs/main-concepts.cn.md
 
