--- a/201810.md
+++ b/201810.md
@@ -52,4 +52,4 @@
 ## 9.腾讯发布前端组件框架 Omi:
 - GitHub: https://github.com/Tencent/omi
 - doc: https://github.com/Tencent/omi/blob/master/docs/main-concepts.cn.md
-
+- [腾讯发布前端组件框架 Omi，全面拥抱 Web Components](https://juejin.im/post/5bc823d46fb9a05d1d2e3fc9)
