--- a/201810.md
+++ b/201810.md
@@ -53,3 +53,10 @@
 - GitHub: https://github.com/Tencent/omi
 - doc: https://github.com/Tencent/omi/blob/master/docs/main-concepts.cn.md
 - [腾讯发布前端组件框架 Omi，全面拥抱 Web Components](https://juejin.im/post/5bc823d46fb9a05d1d2e3fc9)
+
+
+
+## 10.Solidity:一种语法类似JavaScript的高级语言。它被设计成以编译的方式生成以太坊虚拟机代码
+- 官方GitHub仓库：https://github.com/ethereum/solidity
+
+ -中文版 GitHub 仓库：https://github.com/twq0076262/solidity-zh
