--- a/201810.md
+++ b/201810.md
@@ -59,4 +59,8 @@
 ## 10.Solidity:一种语法类似JavaScript的高级语言。它被设计成以编译的方式生成以太坊虚拟机代码
 - 官方GitHub仓库：https://github.com/ethereum/solidity
 
- -中文版 GitHub 仓库：https://github.com/twq0076262/solidity-zh
+- 中文版 GitHub 仓库：https://github.com/twq0076262/solidity-zh
+
+
+## 11.最新可用的google hosts文件。国内镜像：
+- GitHub： 最新可用的google hosts文件。国内镜像
