--- a/201810.md
+++ b/201810.md
@@ -64,3 +64,8 @@
 
 ## 11.最新可用的google hosts文件。国内镜像：
 - GitHub： 最新可用的google hosts文件。国内镜像
+
+## Caddy 是一个支持 HTTP/2，自带 HTTPS 功能的跨平台、易于使用的 Web 服务器
+- GitHub：https://github.com/mholt/caddy
+- website：https://caddyserver.com/
+- doc: https://caddyserver.com/docs
