--- a/201810.md
+++ b/201810.md
@@ -51,7 +51,7 @@
 
 ## 9.腾讯发布前端组件框架 Omi:
 - GitHub: https://github.com/Tencent/omi
-- doc: https://github.com/Tencent/omi/blob/master/docs/main-concepts.cn.md
+- docs: https://github.com/Tencent/omi/blob/master/docs/main-concepts.cn.md
 - [腾讯发布前端组件框架 Omi，全面拥抱 Web Components](https://juejin.im/post/5bc823d46fb9a05d1d2e3fc9)
 
 
@@ -65,7 +65,13 @@
 ## 11.最新可用的google hosts文件。国内镜像：
 - GitHub： 最新可用的google hosts文件。国内镜像
 
-## Caddy 是一个支持 HTTP/2，自带 HTTPS 功能的跨平台、易于使用的 Web 服务器
+## 12.Caddy 是一个支持 HTTP/2，自带 HTTPS 功能的跨平台、易于使用的 Web 服务器
 - GitHub：https://github.com/mholt/caddy
 - website：https://caddyserver.com/
-- doc: https://caddyserver.com/docs
+- docs: https://caddyserver.com/docs
+
+
+
+## 13.美国航空航天局开源了火星漫游车的设计,完全使用市场上可以买到的材料，爱好者就能做出自己的漫游车。它使用树莓派作为车载控制中心，使用安卓手机或 xbox 手柄遥控。
+- GitHub：https://github.com/nasa-jpl/open-source-rover
+- docs: https://opensourcerover.jpl.nasa.gov/
