--- a/201810.md
+++ b/201810.md
@@ -75,3 +75,8 @@
 ## 13.美国航空航天局开源了火星漫游车的设计,完全使用市场上可以买到的材料，爱好者就能做出自己的漫游车。它使用树莓派作为车载控制中心，使用安卓手机或 xbox 手柄遥控。
 - GitHub：https://github.com/nasa-jpl/open-source-rover
 - docs: https://opensourcerover.jpl.nasa.gov/
+
+
+## 14.精通 JavaScript 模块
+- GitHub： https://github.com/mjavascript/mastering-modular-javascript
+- docs: https://mjavascript.com/
