--- a/201811.md
+++ b/201811.md
@@ -20,5 +20,11 @@
 
 
 
+## 6.obs-studio：由 OBS 项目维护的免费开源流媒体和录制程序。该程序支持 Windows 7、macOS 10.10、Ubuntu 14.04 操作系统。可用于直播和屏幕录制，
+- GitHub： https://github.com/obsproject/obs-studio
+- website： https://obsproject.com/
+
+
+
 ## 参考
 - [ruanyf-29期](https://www.yuque.com/ruanyf/share/issue-29)
